fix overflow

--- a/saojoao2024/src/index.css
+++ b/saojoao2024/src/index.css
@@ -14,6 +14,6 @@
 
 
 body{
-  overflow-x: hidden;
+  overflow: hidden;
   background-image: url('./assets/Background/Background.png');
 }
